name:                reflex-material-bootstrap
version:             0.2.0.0
synopsis:            Frontend library for reactive bootstrap with material skin
description:         Please see README.md
homepage:            https://github.com/hexresearch/reports-manager
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
license:             MIT
copyright:           2017 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  CHANGELOG.md

flag android-impl
  Description: Build for android
  Default:     False
  Manual:      True

library
  hs-source-dirs:      src
  exposed-modules:
    Web.Reflex.Bootstrap
    Web.Reflex.Bootstrap.Basket
    Web.Reflex.Bootstrap.Context
    Web.Reflex.Bootstrap.Markup
    Web.Reflex.Bootstrap.Menu
    Web.Reflex.Bootstrap.Pagination
    Web.Reflex.Bootstrap.Progress
    Web.Reflex.Bootstrap.Router
    Web.Reflex.Bootstrap.Table
    Web.Reflex.Bootstrap.Tabs
    Web.Reflex.Bootstrap.Tooltip
    Web.Reflex.Bootstrap.Utils
    Web.Reflex.Bootstrap.Wizzard
    Web.Reflex.Bootstrap.Form
  default-language:    Haskell2010
  build-depends:
      base
    , aeson
    , bytestring
    , containers
    , data-default
    , dependent-map
    , either
    , exception-transformers
    , ghcjs-dom
    , lens
    , monad-control
    , mtl
    , ref-tf
    , reflex
    , reflex-dom
    , safe
    , text
    , time
  default-extensions:
    BangPatterns
    DataKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    KindSignatures
    LambdaCase
    MultiWayIf
    OverloadedLists
    OverloadedStrings
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    CPP


  if flag(android-impl)
    cpp-options: -DANDROID_IMPL
    build-depends: jsaddle
  else
    exposed-modules:
      Web.Reflex.Bootstrap.Upload.Input
      Web.Reflex.Bootstrap.Modal
      Web.Reflex.Bootstrap.Focus
    build-depends:
      ghcjs-base
source-repository head
  type:     git
  location: https://github.com/hexresearch/reflex-material-bootstrap
